<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph.xml"
    app:startDestination="@id/mainFragment">

    <fragment
        android:id="@+id/mainFragment"
        android:name="com.example.whowantstobeawinner.ui.MainFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_main">
        <action
            android:id="@+id/action_mainFragment_to_quizQuestionFragment"
            app:destination="@id/quizQuestionFragment" />
    </fragment>
    <fragment
        android:id="@+id/quizQuestionFragment"
        android:name="com.example.whowantstobeawinner.ui.QuizQuestionFragment"
        android:label="@string/quiz_solving"
        tools:layout="@layout/fragment_quiz_question">
        <action
            android:id="@+id/action_quizQuestionFragment_to_quizResultsFragment"
            app:destination="@id/quizResultsFragment" />
    </fragment>
    <fragment
        android:id="@+id/quizResultsFragment"
        android:name="com.example.whowantstobeawinner.ui.QuizResultsFragment"
        android:label="@string/results_name"
        tools:layout="@layout/fragment_quiz_results">
        <action
            android:id="@+id/action_quizResultsFragment_to_mainFragment"
            app:destination="@id/mainFragment" />
    </fragment>
</navigation>