<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.whowantstobeawinner.ui.SharedViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:quizApiStatus="@{viewModel.status}"
        android:gravity="center"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/main_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            tools:context=".ui.QuizQuestionFragment">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:textAlignment="center"
                android:text="@{viewModel.currentQuizQuestion.question}"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                tools:text="Some text?" />

            <ListView
                android:id="@+id/options_list_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/activatedBackgroundIndicator"
                android:divider="@color/transparent"
                android:dividerHeight="10dp"
                android:padding="40dp"
                app:arrayData="@{viewModel.currentQuizQuestion.options}"
                tools:listitem="@layout/quiz_option_item" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginHorizontal="100dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cut_50" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/right_for_mistake" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/friend_call" />

            </LinearLayout>

        </LinearLayout>

        <!--            TODO: extract to error_and_loading.xml layout-->

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progress_bar"
            android:visibility="gone"
            />

        <TextView
            android:id="@+id/error_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.errorMessage}"
            android:visibility="gone"
            android:layout_margin="20dp"
            tools:text="Произошла ошибка при подключении к серверу"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/retry_button"
            android:text="@string/retry"
            android:visibility="gone"
            />

    </LinearLayout>
</layout>